# abstract-wiki-architect

./: .env  .env.example  .gitattributes  .gitignore  Makefile  README.md  Run-Architect.ps1  Wiki.gf  Wiki.gfo  Wiki.pgf  WikiAfr.gf  WikiAfr.gfo  WikiAra.gf  WikiBul.gf  WikiCat.gf  WikiChi.gf  WikiChi.gfo  WikiDan.gf  WikiDeu.gf  WikiDeu.gfo  WikiDut.gf  WikiDut.gfo  WikiEng.gf  WikiEng.gfo  WikiEst.gf  WikiEst.gfo  WikiFin.gf  WikiFre.gf  WikiGer.gf  WikiGre.gf  WikiHin.gf  WikiHun.gf  WikiIce.gf  WikiIta.gf  WikiJap.gf  WikiJpn.gf  WikiLat.gf  WikiLav.gf  WikiLit.gf  WikiMlt.gf  (+83 more)
ai_services/: architect.py  client.py  judge.py  lexicographer.py  prompts.py  surgeon.py
alembic/: env.py
alembic/versions/: 1807e0eccbca_initial_tables.py
app/: __init__.py  main.py
app/adapters/: __init__.py  api.py  llm_adapter.py  ninai.py  redis_broker.py  redis_bus.py  s3_repo.py  task_queue.py  wikidata_adapter.py
app/api/: routes.py
app/core/: __init__.py
app/services/: lexicon_store.py
app/shared/: __init__.py  config.py  container.py  lexicon.py  logging_config.py  observability.py  resilience.py  telemetry.py
app/worker/: __init__.py  main.py  settings.py  tasks.py
app/workers/: worker.py
architect_frontend/: .eslintrc.json  .gitignore  next.config.mjs  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
architect_frontend/.next/: app-build-manifest.json  trace
architect_http_api/: __init__.py  config.py  config_gf.py  main.py
architect_http_api/ai/: __init__.py  explanations.py  frame_builder.py  intent_handler.py  suggestions.py
architect_http_api/db/: __init__.py  models.py  session.py
architect_http_api/gf/: __init__.py  language_map.py
architect_http_api/logging/: __init__.py  config.py
architect_http_api/registry/: frames_registry.py  loaders.py
architect_http_api/repositories/: __init__.py  entities.py  frames.py  generations.py  logs.py
architect_http_api/routers/: ai.py  entities.py  frames.py  generate.py  grammar.py  grammar_service.py
architect_http_api/schemas/: __init__.py  ai.py  (+5 more)
build_logs/: error_Afr.txt  error_Amh.txt  error_Bel.txt  error_Bul.txt  error_Cat.txt  error_Cgg.txt  error_Chi.txt  error_Cze.txt  error_Dan.txt  error_Deu.txt  error_Dut.txt  error_Eng.txt  error_Est.txt  error_Ext.txt  error_Fao.txt  error_Gla.txt  error_Grc.txt  error_Gre.txt  error_Heb.txt  error_Hye.txt  error_Ice.txt  error_Kam.txt  error_Kaz.txt  error_Lat.txt
builder/: build_plan.json  compiler.py  config.py  forge.py  healer.py  orchestrator.py  strategies.json  strategist.py
config/: everything_matrix_config.json  iso_to_wiki.json
constructions/: base.py  copula_attributive_adj.py  copula_equative_classification.py  ditransitive_event.py  topic_comment_eventive.py  transitive_event.py
data/: input_qids.json
deploy/: nginx.conf
discourse/: planner.py  referring_expression.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker
docs/: 00-SETUP_AND_DEPLOYMENT.md  01-ENGINE_ARCHITECTURE.md  02-BUILD_SYSTEM.md  03-LEXICON_ARCHITECTURE.md  04-API_REFERENCE.md  05-AI_SERVICES.md  06-ADDING_A_LANGUAGE.md  09-AI_CONTEXT_DUMP.md  10-GLOSSARY.md  11-CONTRIBUTING.md  12-WIKIMEDIA_ALIGNMENT.md  15-SCHEMA_ALIGNMENT_PROTOCOL.md  17-TOOLS_AND_TESTS_INVENTORY.md  A-SIMPLE-language_integration_workflow_reference.md  ADR-001-GF_VERSION_STRATEGY.md  AI_Services.md  ARCHITECTURE_V2.md  Abstract_Wiki_Architect_Build_and_Launch_System.md  DEVELOPER_SETUP.md  FRAMES_ENTITY.md  FRAMES_EVENT.md  FRAMES_META.md  FRAMES_NARRATIVE.md  FRAMES_OVERVIEW.md  FRAMES_RELATIONAL.md  FRONTEND_API.md  GF_ARCHITECTURE.md  GF_Concepts.md  Glossary.md  HybridEnvironment-LinuxWindows.md  LexiconAndLaguageChartSetStraight.txt  MultilingualEngineV2.md  NLG Frontend API Documentation.md  Overview.md  RESEARCH_GF_MAPPING.md  SeniorUpdate.txt  System Reference High Road Grammar Generation.txt  TODO sort utils and tools folders (files location and links).txt  Three_AI-Gemini.md  UPGRADE v2-0 Omni-Upgrade Architecture Specification.md  (+4 more)
engines/: analytic.py  bantu.py  celtic.py  indo_aryan.py  iranic.py  isolating.py  slavic.py
gf/: AbstractWiki.gf  AbstractWiki.gfo  AbstractWiki_master.gf  DictAfr.gf  DictAmh.gf  DictAra.gf  DictBas.gf  DictBul.gf  DictCat.gf  DictChi.gf  DictChi.gfo  DictDan.gf  DictDeu.gf  DictDut.gf  DictEng.gf  DictEng.gfo  DictEst.gf  DictFin.gf  DictFra.gf  DictFre.gf  DictFre.gfo  DictGer.gf  DictGer.gfo  DictGre.gf  DictHeb.gf  DictHin.gf  DictHun.gf  DictIce.gf  DictIta.gf  DictIta.gfo  DictJap.gf  DictJpn.gf  DictKor.gf  DictLat.gf  DictLav.gf  DictLit.gf  DictMlt.gf  DictMon.gf  DictNep.gf  DictNno.gf  (+192 more)
language_profiles/: profiles.json
lexicon/: aw_lexeme_bridge.py  loader.py  wikidata_bridge.py
logs/: start_api.sh  start_worker.sh
morphology/: bantu.py  base.py  celtic.py  germanic.py  indo_aryan.py  iranic.py  isolating.py  romance.py  semitic.py  slavic.py
nlg/: api.py  cli_frontend.py
prototypes/: local_test_runner.py
qa/: test_frames_entity.py  test_frames_event.py  test_frames_narrative.py  test_frames_relational.py  test_runner.py
qa_tools/: batch_test_generator.py  lexicon_smoke_tests.py  test_suite_generator.py  universal_test_runner.py
scripts/: align_system.py  bootstrap_tier1.py  debug_loader.py  demo_generation.py  demo_quad.py  enter_wsl_env.sh  init_languages.py  migrate_lexicons.py  test_api_generation.py  test_tier1_load.py  verify_lexicon.py
semantics/: all_frames.py  aw_bridge.py  normalization.py  types.py
tests/: __init__.py  conftest.py  test_api_smoke.py  test_gf_dynamic.py  test_lexicon_loader.py  test_lexicon_smoke.py  test_multilingual_generation.py
tools/: ai_refiner.py  bootstrap_tier1.py  cleanup_root.py  diagnostic_audit.py  generate_clean_lexicon.py  harvest_lexicon.py  language_health.py
utils/: __init__.py  ai_refiner.py  build_lexicon_from_wikidata.py  dump_lexicon_stats.py  grammar_factory.py  logging_setup.py  migrate_lexicon_schema.py  refresh_lexicon_index.py  seed_lexicon_ai.py  tool_logger.py  tool_run_logging.py
(+690 files in other folders)
