[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstract-wiki-architect"
version = "2.0.0"
description = "Industrial-grade, resilient NLG system for Abstract Wikipedia."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Abstract Wiki Architect Contributors" }
]

# Core Architecture Dependencies (Domain & Shared Utilities)
# These are required for the Domain logic, Logging, and Resilience policies.
dependencies = [
  "pydantic>=2.6.0",       # Strict Domain Modeling
  "pydantic-settings>=2.1.0", # Config Management
  "structlog>=24.1.0",     # Structured JSON Logging
  "tenacity>=8.2.3"        # Circuit Breakers & Retries
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Text Processing :: Linguistic",
  "Intended Audience :: Developers",
  "Topic :: System :: Distributed Computing"
]

[project.optional-dependencies]
# Infrastructure Layer (API, Worker, Messaging, Telemetry)
# Install this group for running the Backend or Worker services.
api = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "redis>=5.0.1",          # Async Messaging Broker
  "arq>=0.25.0",           # Async Task Queue (Worker)
  "opentelemetry-api>=1.22.0",
  "opentelemetry-sdk>=1.22.0",
  "opentelemetry-instrumentation-fastapi>=0.43b0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.12.0",
  "httpx>=0.26.0",         # Resilience-ready HTTP Client
  "jinja2>=3.1.3"
]

# Development & QA tooling
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pandas>=1.5.0",
  "black>=24.1.0",
  "flake8>=7.0.0",
  "mypy>=1.8.0",
  "httpx>=0.26.0"          # Required for integration tests
]

# Optional LLM integration
llm = [
  "openai>=1.0.0",
  "anthropic>=0.3.0"
]

# Optional Wikidata / Lexicon tools
wikidata = [
  "requests>=2.31.0"
]

[project.scripts]
# Primary Entry Points (Hexagonal Adapters)
# Note: These point to the module execution to avoid needing a 'start()' function
# Usage: architect-api (Runs uvicorn), architect-worker (Runs worker process)
architect-api = "app.adapters.api.main:start"      
architect-worker = "app.worker.main:start"         

# Legacy/Utility CLIs
nlg-cli = "nlg.cli_frontend:main"
lexicon-cli = "lexicon.cli:main"

[project.urls]
Homepage = "https://github.com/Rejean-McCormick/abstract-wiki-architect"
Source = "https://github.com/Rejean-McCormick/abstract-wiki-architect"
Issues = "https://github.com/Rejean-McCormick/abstract-wiki-architect/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
# Scans for the new 'app' directory structure (Modular Monolith)
# Includes: app.core, app.adapters, app.shared, app.worker

# -------------------------
# Tool configuration
# -------------------------

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = [
  "E203",  # whitespace before ':', conflicts with black
  "W503"   # line break before binary operator, conflicts with black
]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv"
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = [
  "build",
  "dist",
  ".venv"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q"
asyncio_mode = "auto"